# robotics_project_work

./: README.MD  README.txt
dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/: .setup_assistant  package.xml
dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/config/: dual_fr3.ros2_control.xacro  dual_fr3.srdf  dual_fr3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/launch/: move_group.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_arm_robot_setup/src/fr3_dual_arm_sim/: CMakeLists.txt  package.xml
dual_arm_robot_setup/src/fr3_dual_arm_sim/config/: dual_fr3_controllers.yaml
dual_arm_robot_setup/src/fr3_dual_arm_sim/launch/: simulation.launch.py
dual_arm_robot_setup/src/fr3_dual_arm_sim/models/table_with_pedestal/: model.sdf
dual_arm_robot_setup/src/fr3_dual_arm_sim/scripts/: moveit_node.py
dual_arm_robot_setup/src/fr3_dual_arm_sim/urdf/: dual_fr3.urdf  dual_fr3.urdf.xacro  dual_fr3.xacro
dual_arm_robot_setup/src/fr3_dual_arm_sim/worlds/: simulation_world.sdf
ratul/dual_arm_fix1/: .gitignore
ratul/dual_arm_fix1/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/: package.xml
ratul/dual_arm_fix1/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/config/: dual_fr3.ros2_control.xacro  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
ratul/dual_arm_fix1/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/launch/: demo.launch.py
ratul/dual_arm_fix1/dual_arm_robot_setup/src/fr3_dual_arm_sim/: CMakeLists.txt  package.xml
ratul/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/: CMakeLists.txt
ratul/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/config/: dual_fr3.ros2_control.xacro  dual_fr3.srdf  dual_fr3.urdf.xacro  moveit_controllers.yaml
ratul/dual_arm_robot_setup/src/fr3_dual_arm_moveit_config/launch/: moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
ratul/dual_arm_robot_setup/src/fr3_dual_arm_sim/launch/: simulation.launch.py
ratul/dual_arm_robot_setup/src/fr3_dual_arm_sim/urdf/: dual_fr3.urdf.xacro
ratul/onefr3/src/fr3_moveit2_custom/: .setup_assistant
ratul/onefr3/src/fr3_moveit2_custom/config/: fr3.srdf
ratul/onefr3/src/fr3_moveit2_custom/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
ratul/src/fr3_moveit2_custom/: CMakeLists.txt  package.xml
ratul/src/fr3_moveit2_custom/config/: ros2_controllers.yaml
ratul/src/fr3_moveit2_custom/launch/: spawn_controllers.launch.py
src/fr3_moveit2_custom/config/: fr3.ros2_control.xacro  moveit_controllers.yaml
src/fr3_moveit2_custom/launch/: static_virtual_joint_tfs.launch.py
(+3 files in other folders)
