<?xml version="1.0"?>
<package format="3">
  <name>fr3_dual_arm_sim</name>
  <version>0.1.0</version>
  <description>Simulation of two FR3 arms on desk + pedestal with MoveIt support</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS-level dependencies -->
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>

  <depend>xacro</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Franka / FR3 and MoveIt dependencies -->
  <depend>franka_ros2</depend>
  <depend>franka_description</depend>
  <depend>franka_hardware</depend>
  <depend>franka_gripper</depend>
  <depend>franka_example_controllers</depend>
  <depend>franka_semantic_components</depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>rviz2</depend>

  <exec_depend>moveit_py</exec_depend>

  <exec_depend>spawn_entity</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
